1.6.2:
-Fix: Skip files that ought to be skipped instead of generating a new file name
-Fix: Make saving custom profiles work again
-Fix: Don't mix up the output directoy history for metadata and normal mode

1.6.1:
-Fix: Don't try to restore the file list when calling soundKonverter while it is running

1.6.0:
-Add: Update translations
-Fix: When loading file lists some options were ignored

1.5.90 (1.6.0 rc1):
-Add: Make the 'Failed' status clickable and open the log if clicked
-Add: Make the file name of covers written to the output directory configureable
-Change: Remove the info tab from the options editor
-Change: Discard changes in the options editor when selecting a different file in file list
-Fix: Problem dialog wasn't shown when dropping unsupported files on the soundKonverter or ReplayGain tool window
-Fix: Show progress when decoding properly
-Fix: Crash when in options editor opened items finished
-Fix: Crash with ogg files containing covers but no mime type or description

1.5.0:
-Add: Update translations

1.4.90 (1.5.0 rc1):
-Add: Copy embedded covers for wma files
-Add: Calculate Album Gain for albums in the conversion list
-Add: Russian translation
-Change: Replace Spanish Argentinan translation (es_AR) with Spanish (es) since KDE isn't able to use es_AR translations
-Fix: Cdrom drive detection would fail with Ubuntu 12.04 (patch by Eike Thaden)
-Fix: Musicbrainz lookup not working if data track present (patch by Eike Thaden)
-Fix: Don't show data tracks in the CD ripper UI (patch by Eike Thaden)
-Fix: Musicbrainz lookup would only work through the freedb gateway (patch by Eike Thaden)

1.4.0:
-Add: Show progress bar when loading file lists

1.3.90 (1.4.0 rc1):
-Add: TTA Enc plugin
-Add: sad (Black & White audio file) support
-Add: Improved saving of the last used conversion profile
-Change: Reduce amount of alerts when dropping unsupported file types (like images) on the file list
-Fix: Files added with "add directory" could fail

1.3.3: